--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         </head>
         <header>
             <h1>Bem vindo ao meu primeiro site</h1>
-            <p>Este é um exemplo de um site simples em HTML</p>
+            <p id="importante">Este é um exemplo de um site simples em HTML</p>
         </header>
         <main>
             <section missao>
-                <h2> Missão</h2>
+                <h2 class="destaque"> Missão</h2>
                 <p>Praticar e aprender</p>
             </section missao>
             <section visao>
